# intester

./: CMakeLists.txt
miyoo/: config.json
src/: font.h  intester.cc  rez.cc  rez.hh  sdlcompat.cc  sdlcompat.hh
